# project_1

./: .gitignore  makefile  pyproject.toml  requirements.txt
.github/workflows/: django.yml
server/api/: auth.py  views.py
server/app/: admin.py  models.py  serializers.py
server/app/migrations/: 0001_initial.py  0002_alter_rating_stars.py  0003_alter_rating_stars.py  0004_alter_rating_stars.py  0005_alter_rating_stars.py
server/core/: settings.py  urls.py
server/urls/: urls.py
